# controllers/booksController.js
@@ -10,22 +10,11 @@ booksCont.getById = async (req, res) => {
   const id = req.params.id;
   const book = await booksModel.getBookById(id);
 
-  if (!book) res.send("Not found.").status(400);
+  if (!book) res.status(404).send("Not found.");
   else res.json(book);
 };
 
 booksCont.addNew = async (req, res) => {
-  /*  #swagger.requestBody = {
-            required: true,
-            content: {
-                "application/json": {
-                    schema: {
-                        $ref: "#/components/schemas/bookCreate"
-                    }  
-                }
-            }
-        } 
-    */
   const { title, author, publishYear, pages, genre, linkToBuy, isBanned } =
     req.body;
 
@@ -40,27 +29,16 @@ booksCont.addNew = async (req, res) => {
   );
 
   if (result) res.sendStatus(200);
-  else res.send("Error adding the new book.").status(400);
+  else res.status(400).send("Error adding the new book.");
 };
 
 booksCont.update = async (req, res) => {
-  /*  #swagger.requestBody = {
-            required: true,
-            content: {
-                "application/json": {
-                    schema: {
-                        $ref: "#/components/schemas/bookUpdate"
-                    }  
-                }
-            }
-        } 
-    */
   const id = req.params.id;
   const bookUpdate = req.body;
   const result = await booksModel.updateBook(id, bookUpdate);
 
   if (result) res.sendStatus(200);
-  else res.send("Error updating the book.").status(400);
+  else res.status(400).send("Error updating the book.");
 };
 
 booksCont.delete = async (req, res) => {
@@ -68,7 +46,7 @@ booksCont.delete = async (req, res) => {
   const result = await booksModel.deleteBook(id);
 
   if (result) res.sendStatus(200);
-  else res.send("Error updating the book.").status(400);
+  else res.status(400).send("Error updating the book.");
 };
 
 module.exports = booksCont;
