# models/booksModel.js
@@ -2,23 +2,36 @@ const { ObjectId } = require("mongodb");
 const connectToDb = require("../database/connection");
 
 const getBooksCollection = async () => {
-  const db = await connectToDb;
-  const collection = await db.collection("books");
-  return collection;
+  try {
+    const db = await connectToDb;
+    const collection = await db.collection("books");
+
+    return collection;
+  } catch (error) {
+    throw new Error(error);
+  }
 };
 
 const getAllBooks = async () => {
-  const booksCollection = await getBooksCollection();
-  const books = await booksCollection.find({}).toArray();
+  try {
+    const booksCollection = await getBooksCollection();
+    const books = await booksCollection.find({}).toArray();
 
-  return books;
+    return books;
+  } catch (error) {
+    throw new Error(error);
+  }
 };
 
 const getBookById = async (id) => {
-  const booksCollection = await getBooksCollection();
-  const book = await booksCollection.findOne({ _id: new ObjectId(id) });
+  try {
+    const booksCollection = await getBooksCollection();
+    const book = await booksCollection.findOne({ _id: new ObjectId(id) });
 
-  return book;
+    return book;
+  } catch (error) {
+    throw new Error(error);
+  }
 };
 
 const addNewBook = async (
@@ -30,39 +43,51 @@ const addNewBook = async (
   linkToBuy,
   isBanned,
 ) => {
-  const booksCollection = await getBooksCollection();
-  const insertResult = await booksCollection.insertOne({
-    title,
-    author,
-    publishYear,
-    pages,
-    genre,
-    linkToBuy,
-    isBanned,
-  });
+  try {
+    const booksCollection = await getBooksCollection();
+    const insertResult = await booksCollection.insertOne({
+      title,
+      author,
+      publishYear,
+      pages,
+      genre,
+      linkToBuy,
+      isBanned,
+    });
 
-  return insertResult.acknowledged;
+    return insertResult.acknowledged;
+  } catch (error) {
+    throw new Error(error);
+  }
 };
 
 const updateBook = async (id, data) => {
-  const booksCollection = await getBooksCollection();
-  const result = await booksCollection.findOneAndUpdate(
-    { _id: new ObjectId(id) },
-    {
-      $set: data,
-    },
-  );
+  try {
+    const booksCollection = await getBooksCollection();
+    const result = await booksCollection.findOneAndUpdate(
+      { _id: new ObjectId(id) },
+      {
+        $set: data,
+      },
+    );
 
-  return result;
+    return result;
+  } catch (error) {
+    throw new Error(error);
+  }
 };
 
 const deleteBook = async (id) => {
-  const booksCollection = await getBooksCollection();
-  const result = await booksCollection.findOneAndDelete({
-    _id: new ObjectId(id),
-  });
+  try {
+    const booksCollection = await getBooksCollection();
+    const result = await booksCollection.findOneAndDelete({
+      _id: new ObjectId(id),
+    });
 
-  return result;
+    return result;
+  } catch (error) {
+    throw new Error(error);
+  }
 };
 
 module.exports = {
