# routes/booksRoute.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const router = express.Router();
 const booksController = require("../controllers/booksController");
+const commonValidatior = require("../validators/commonValidator");
 const booksValidator = require("../validators/bookValidator");
 const { handleErrors } = require("../utilities/");
 
@@ -10,33 +11,55 @@ router.get("/", handleErrors(booksController.getAll));
 // Route to get a book by id
 router.get(
   "/:id",
-  booksValidator.bookIdValidationRules,
-  booksValidator.bookValidationResult,
+  commonValidatior.idValidationRules,
+  commonValidatior.commonValidationResult,
   handleErrors(booksController.getById),
 );
 
 // Route to add a new book
 router.post(
   "/",
+  /*  #swagger.requestBody = {
+              required: true,
+              content: {
+                  "application/json": {
+                      schema: {
+                          $ref: "#/components/schemas/bookCreate"
+                      }  
+                  }
+              }
+          } 
+      */
   booksValidator.bookCreateValidationRules,
-  booksValidator.bookValidationResult,
+  commonValidatior.commonValidationResult,
   handleErrors(booksController.addNew),
 );
 
 // Route to update a book
 router.put(
   "/:id",
-  booksValidator.bookIdValidationRules,
+  /*  #swagger.requestBody = {
+              required: true,
+              content: {
+                  "application/json": {
+                      schema: {
+                          $ref: "#/components/schemas/bookUpdate"
+                      }  
+                  }
+              }
+          } 
+      */
+  commonValidatior.idValidationRules,
   booksValidator.bookUpdateValidationRules,
-  booksValidator.bookValidationResult,
+  commonValidatior.commonValidationResult,
   handleErrors(booksController.update),
 );
 
 // Route to delete a book
 router.delete(
   "/:id",
-  booksValidator.bookIdValidationRules,
-  booksValidator.bookValidationResult,
+  commonValidatior.idValidationRules,
+  commonValidatior.commonValidationResult,
   handleErrors(booksController.delete),
 );
 
