# server.js
@@ -5,6 +5,7 @@ const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
 const db = require("./database/connection");
 const booksRoute = require("./routes/booksRoute");
+const movieRoute = require("./routes/moviesRoute");
 const port = process.env.PORT || 7500;
 
 app.use(bodyParser.json());
@@ -13,6 +14,7 @@ app.use(bodyParser.urlencoded({ extended: true }));
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use("/books/", booksRoute);
+app.use("/movies/", movieRoute);
 
 app.listen(port, () => {
   console.log(`CRUD app listening on port ${port}`);
